force-app/main/default/objects/Prescription_Item__c/Prescription_Item__c.object-meta.xml
<CustomObject>
    <label>Prescription Item</label>
    <nameField>
        <displayFormat>PRESCITEM-{0000}</displayFormat>
        <label>Prescription Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescription Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>