force-app/main/default/objects/Prescription_Item__c/fields/Concession__c.field-meta.xml
<CustomField>
    <fullName>Concession__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Concession</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>