force-app/main/default/objects/Prescription_Item__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <label>Medication Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>