force-app/main/default/objects/Prescription_Item__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prescription</label>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Prescription Items</relationshipLabel>
    <relationshipName>Prescription_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>